[tool.poetry]
name = "minitwizzy"
version = "0.0.1"
description = "MiniTwitter for DevOps"
authors = ["p"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.2"
Flask = "^3.0.0"
werkzeug = "^3.0.0"
jinja2 = "^3.0.0"
requests = "^2.31.0"
pytest = "^8.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
